fixed missing border for song inputs in join game page

--- a/frontend/src/assets/join_game/styles.css
+++ b/frontend/src/assets/join_game/styles.css
@@ -64,7 +64,7 @@ p {
 #songs {
   border-radius: 25px;
   padding: 1px;
-  border: 5px solid var(--accent-color-3);
+  border: 5px solid var(--accent-color-2);
   background-color: var(--color-white);
   width: 70%;
   max-width: 600px;
